--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body, html {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: Arial, sans-serif;
@@ -57,31 +58,70 @@ button {
     /* Other styles (font, size, etc.) remain unchanged */
 }
 
-.itinerary-container h1 {
-    font-family: 'Groovy', cursive; /* Replace 'Groovy' with the actual font name */
-    font-weight: bold;
+
+.itinerary-container h1, .itinerary-container h2 {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
     text-align: center;
-    font-size: 48px;
+    color: #4d2419;
+}
+
+.itinerary-container h1 {
+    top: 10%;
+    font-family: 'Comic Sans', cursive;
+    font-weight: bold;
+    font-size: 75px;
+    margin-bottom: 0;
 }
 
 .itinerary-container h2 {
-    font-family: 'Calm', sans-serif; /* Replace 'Calm' with the actual font name */
-    text-align: center;
+    top: 26%;
+    font-family: 'Comic Neue', sans-serif;
     font-size: 24px;
+    margin-top: 0;
 }
 
-.itinerary p {
+.spacer {
+    margin: 50px 0; /* Adjust this for spacing between h2 and itinerary list */
+}
+
+.itinerary {
     display: flex;
-    justify-content: space-between;
+    color: #4d2419;
+    flex-direction: column;
     align-items: center;
+    width: 75%; /* Match this with your .item width for consistency */
+    position: fixed; /* Make the container fixed to start from a specific point */
+    top: 35%; /* Start from the vertical center of the screen */
+    left: 50%;
+    transform: translate(-50%, 0); /* Center it horizontally */
+    overflow-y: auto; /* Allows scrolling within the container if it extends beyond the viewport height */
+    max-height: 50%; /* Adjust this value based on your needs */
+}
+
+.item {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+    width: 75%; /* Adjust based on your preference */
+    position: relative;
+    max-width: 100%;
 }
 
 .place, .time {
-    flex-basis: 40%; /* Adjust based on your preference */
+    white-space: nowrap; /* Ensures content stays in one row */
 }
 
 .dots {
-    flex-grow: 1;
-    border-bottom: 1px dotted #000;
-    margin: 0 10px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.dots::after {
+    content: '.......................................................................................................................';
+    display: inline-block;
+    width: 98%;
+    overflow: hidden;
 }
