--- a/style.css
+++ b/style.css
@@ -70,14 +70,14 @@ button {
 
 .itinerary-container h1 {
     top: 10%;
-    font-family: 'Comic Sans', cursive;
+    font-family: 'Comic Neue', cursive;
     font-weight: bold;
     font-size: 75px;
     margin-bottom: 0;
 }
 
 .itinerary-container h2 {
-    top: 26%;
+    top: 24%;
     font-family: 'Comic Neue', sans-serif;
     font-size: 28px;
     margin-top: 0;
@@ -98,7 +98,9 @@ button {
     transform: translate(-50%, 0); /* Center it horizontally */
     overflow-y: auto; /* Allows scrolling within the container if it extends beyond the viewport height */
     max-height: 50%; /* Adjust this value based on your needs */
-    padding: 10px; /* Padding around the content */
+    padding-left: 20px; /* Padding around the content */
+    padding-top: 20px;
+    padding-right: 20px;
     border: 1px solid #FFFFFF; /* White border */
     background-color: rgba(255, 255, 255, 0.5); /* White background with 20% opacity */
     box-sizing: border-box; /* Ensures padding is included in the width/height */
@@ -112,6 +114,7 @@ button {
     width: 99%; /* Adjust based on your preference */
     position: relative;
     max-width: 100%;
+    margin-bottom: 20px;
 }
 
 .place, .time {
