--- a/style.css
+++ b/style.css
@@ -13,51 +13,49 @@ body, html {
     justify-content: center;
     align-items: center;
     font-family: Arial, sans-serif;
-    background-color: #EFF48A; /* New background color */
+    background-color: #EFF48A;
     z-index: 1;
 }
 
 #content {
     text-align: center;
-    font-family: 'Comic Neue', cursive; /* Comic Neue font */
-    font-weight: bold; /* Make the text bold */
-    text-transform: uppercase; /* Capitalize all letters */
-    font-size: 50px; /* Increase the font size */
-    /* Add any additional styling as needed */
+    font-family: 'Comic Neue', cursive;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 50px;
 }
 
 #buttons {
-    position: relative; /* Ensures container doesn't change size */
+    position: relative;
     margin-top: 20px;
 }
 
 button {
-    position: relative; /* Keeps buttons in place */
+    position: relative;
     margin: 0 10px;
     padding: 10px;
-    font-size: 20px; /* Change the font size as needed */
-    font-family: 'Comic Neue', cursive; /* Example font - Comic Neue */
+    font-size: 20px;
+    font-family: 'Comic Neue', cursive;
     font-weight: bold;
     cursor: pointer;
 }
 /* Style for the "No" button */
 #noButton {
-    background-color: #f45b69; /* Background color for "No" button */
-    color: #4d2419; /* Text color */
-    border-radius: 10px; /* Slight roundness of corners */
+    background-color: #f45b69;
+    color: #4d2419;
+    border-radius: 10px;
 }
 
 /* Style for the "Yes" button */
 #yesButton {
-    background-color: #84e6f8; /* Background color for "Yes" button */
-    color: #4d2419; /* Text color */
-    border-radius: 10px; /* Slight roundness of corners */
+    background-color: #84e6f8;
+    color: #4d2419;
+    border-radius: 10px;
 }
 
 /* Style for the "Will you be my valentine?" text */
 #content p {
-    color: #4d2419; /* Color of the text */
-    /* Other styles (font, size, etc.) remain unchanged */
+    color: #4d2419;    
 }
 
 
@@ -86,7 +84,7 @@ button {
 }
 
 .spacer {
-    margin: 50px 0; /* Adjust this for spacing between h2 and itinerary list */
+    margin: 50px 0;
 }
 
 .itinerary {
@@ -95,18 +93,18 @@ button {
     font-family: 'Roboto Mono';
     flex-direction: column;
     align-items: center;
-    width: 75%; /* Match this with your .item width for consistency */
-    position: fixed; /* Make the container fixed to start from a specific point */
-    top: 35%; /* Start from the vertical center of the screen */
-    transform: translate(-50%, 0); /* Center it horizontally */
-    overflow-y: auto; /* Allows scrolling within the container if it extends beyond the viewport height */
-    max-height: 50%; /* Adjust this value based on your needs */
-    padding-left: 10px; /* Padding around the content */
+    width: 75%;
+    position: fixed;
+    top: 35%;
+    transform: translate(-50%, 0);
+    overflow-y: auto;
+    max-height: 50%;
+    padding-left: 10px;
     padding-top: 10px;
     padding-right: 10px;
-    border: 1px solid #FFFFFF; /* White border */
-    background-color: rgba(255, 255, 255, 0.5); /* White background with 20% opacity */
-    box-sizing: border-box; /* Ensures padding is included in the width/height */
+    border: 1px solid #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.5);
+    box-sizing: border-box;
     border-radius: 15px;
 }
 
@@ -114,14 +112,14 @@ button {
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
-    width: 99%; /* Adjust based on your preference */
+    width: 99%;
     position: relative;
     max-width: 100%;
     margin-bottom: 10px;
 }
 
 .place, .time {
-    white-space: nowrap; /* Ensures content stays in one row */
+    white-space: nowrap;
     font-size: 26px;
 }
 
